--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="train-switch">
                 <label class="switch">
-                    <input type="checkbox" />
+                    <input type="checkbox" class="check"/>
                     <div class="switch-btn"></div>
                 </label>
             </div>
