refactor: added last content, feat: reset button in statistic

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a>Animal (set A)</a></li>
                         <li><a>Animal (set B)</a></li>
                         <li><a>Clothes</a></li>
-                        <li><a>Emotion</a></li>
+                        <li><a>Emotions</a></li>
                         <li><a>Statistic</a></li>
                     </ul>
                 </div>
